# STCAOG

./: .gitignore  CMakeLists.txt
include/graph/: graph.h  property.h
src/: ClothAOG.h  STCAOG.cpp  STCAOG.h  main.cpp
