cmake_minimum_required(VERSION 2.8)
project(STCAOG)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES src/main.cpp src/STCAOG.cpp src/STCAOG.h src/ClothAOG.h)
#find_package(Boost COMPONENTS filesystem system)
include_directories(include)
#include_directories(${Boost_INCLUDE_DIRS})
#link_directories(${Boost_LIBRARY_DIRS})
#add_definitions(${PCL_DEFINITIONS})
#set(Boost_USE_MULTITHREADED ON)
add_executable(STCAOG ${SOURCE_FILES})
#target_link_libraries(STCAOG ${Boost_LIBRARIES})
